feat(i18n): import eslint-config and add commands

--- a/core/internationalization/i18n/package.json
+++ b/core/internationalization/i18n/package.json
@@ -7,8 +7,13 @@
     "node": "18.16.0"
   },
   "devDependencies": {
+    "@windows98/eslint-config": "workspace:*",
     "i18next": "23.8.2",
     "react-i18next": "14.0.5",
     "vue-i18n": "9.2.2"
+  },
+  "scripts": {
+    "lint:js": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
+    "lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\""
   }
 }
