--- a/core/internationalization/i18n/package.json
+++ b/core/internationalization/i18n/package.json
@@ -8,12 +8,15 @@
   },
   "devDependencies": {
     "@windows98/eslint-config": "workspace:*",
+    "@windows98/linters": "workspace:*",
     "i18next": "23.8.2",
     "react-i18next": "14.0.5",
+    "typescript": "5.4.2",
     "vue-i18n": "9.2.2"
   },
   "scripts": {
     "lint:js": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
-    "lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\""
+    "lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
+    "lint:types:run": "tsc"
   }
 }
