feat(ci-cd): prepare a command lint:code:run:all

--- a/core/internationalization/i18n/package.json
+++ b/core/internationalization/i18n/package.json
@@ -15,7 +15,7 @@
     "vue-i18n": "9.2.2"
   },
   "scripts": {
-    "lint:js": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
+    "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
     "lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:types:run": "tsc"
   }
