fix(all): install needed eslint in workspaces

--- a/core/internationalization/i18n/package.json
+++ b/core/internationalization/i18n/package.json
@@ -7,6 +7,7 @@
     "node": "18.16.0"
   },
   "devDependencies": {
+    "eslint": "8.57.0",
     "@windows98/eslint-config": "workspace:*",
     "@windows98/linters": "workspace:*",
     "i18next": "23.8.2",
