feat(i18n): ma-timer - add presets title

--- a/core/internationalization/i18n/src/locales/micro-apps/pl/ma-timer.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-apps/pl/ma-timer.locale.json
@@ -5,6 +5,7 @@
     "start": "Start",
     "stop": "Stop",
     "presets": {
+      "title": "Ustawienia",
       "three-minutes": "3 min",
       "five-minutes": "5 min",
       "ten-minutes": "10 min",
