--- a/core/internationalization/i18n/tsconfig.json
+++ b/core/internationalization/i18n/tsconfig.json
@@ -1,15 +1,9 @@
 {
-	"extends": [
-		"@windows98/linters/ts-config/base"
-	],
+	"extends": ["@windows98/linters/ts-config/base"],
 	"compilerOptions": {
 		"paths": {
-			"vue-i18n": [
-				"./node_modules/vue-i18n/dist/vue-i18n.d.ts"
-			]
+			"vue-i18n": ["./node_modules/vue-i18n/dist/vue-i18n.d.ts"]
 		}
 	},
-	"include": [
-		"./**/*"
-	],
+	"include": ["./**/*"]
 }
