--- a/core/internationalization/i18n/package.json
+++ b/core/internationalization/i18n/package.json
@@ -4,7 +4,8 @@
 	"description": "I18n configuration for Windows 98",
 	"author": "Arkadiusz Paściak",
 	"engines": {
-		"node": "20.12.0"
+		"node": "20.12.0",
+		"pnpm": "9.0.6"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
