--- a/core/internationalization/i18n/package.json
+++ b/core/internationalization/i18n/package.json
@@ -4,12 +4,12 @@
 	"description": "I18n configuration for Windows 98",
 	"author": "Arkadiusz Paściak",
 	"engines": {
-		"node": "20.12.0"
+		"node": "20.12.0",
+		"pnpm": "9.0.6"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
 		"@windows98/configs": "workspace:*",
-		"@windows98/linters": "workspace:*",
 		"i18next": "23.8.2",
 		"lint-staged": "15.2.2",
 		"react-i18next": "14.0.5",
