--- a/core/internationalization/i18n/src/locales/pl/shut-down.locale.json
+++ b/core/internationalization/i18n/src/locales/pl/shut-down.locale.json
@@ -1,11 +1,3 @@
 {
-	"ShutDownBundle.title": "Wyłącz Windows",
-	"ShutDownBundle.description": "Co chcesz zrobić z komputerem?",
-	"ShutDownBundle.description-content": "Bundle jest programem shut down",
-	"ShutDownBundle.shut-down": "Wyłącz",
-	"ShutDownBundle.restart": "Zrestartuj",
-	"ShutDownBundle.ok": "Tak",
-	"ShutDownBundle.cancel": "Anuluj",
-	"ShutDownBundle.services-content-1": "wyłączenie aplikacji",
-	"ShutDownBundle.services-content-2": "zrestartowanie aplikacji"
+	"ShutDownBundle.title": "Wyłącz Windows"
 }
