chore(i18n): delete unneeded translations

--- a/core/internationalization/i18n/src/locales/en/audio.locale.json
+++ b/core/internationalization/i18n/src/locales/en/audio.locale.json
@@ -1,5 +1,3 @@
 {
-	"AudioBundle.button-description": "Button to turn on/off sound",
-	"AudioBundle.description-content": "The Bundle responsible for manage the audio in the application",
-	"AudioBundle.services-content-1": "turn on/off the audio in the app"
+	"AudioBundle.button-description": "Button to turn on/off sound"
 }
