--- a/core/internationalization/i18n/src/locales/pl/language.locale.json
+++ b/core/internationalization/i18n/src/locales/pl/language.locale.json
@@ -1,9 +1,5 @@
 {
-	"LanguageBundle.description-content": "The Bundle odpowiedzialny za zarządzanie <b>językami</b>",
+	"LanguageBundle.de": "Niemiecki",
 	"LanguageBundle.en": "Angielski",
-	"LanguageBundle.pl": "Polski",
-	"LanguageBundle.services-content-1": "zmień język",
-	"LanguageBundle.services-content-2": "zamontuj wersję języka z danych w local storage",
-	"LanguageBundle.services-content-3": "ustaw wersje języka w local storage",
-	"LanguageBundle.services-content-4": "zaaktualizuj atrybut lang"
+	"LanguageBundle.pl": "Polski"
 }
