--- a/core/internationalization/i18n/src/locales/pl/audio.locale.json
+++ b/core/internationalization/i18n/src/locales/pl/audio.locale.json
@@ -1,5 +1,3 @@
 {
-	"AudioBundle.button-description": "Przycisk włączania/wyłączania dźwięku",
-	"AudioBundle.description-content": "Bundle odpowiedzialny za zarządzanie dźwiekiem w aplikacji",
-	"AudioBundle.services-content-1": "włącz i wyłącz dźwięk"
+	"AudioBundle.button-description": "Przycisk włączania/wyłączania dźwięku"
 }
