--- a/docs/src/stories/design-system/introduction.mdx
+++ b/docs/src/stories/design-system/introduction.mdx
@@ -1,6 +1,6 @@
 import { Meta, Title } from "@storybook/blocks";
 
-<Meta title="Introduction" />
+<Meta title="Design System/Introduction" />
 
 <Title>The design system for Windows98</Title>
 
