refactor(docs): change name from micro-apps to micro-frontends

--- a/docs/src/stories/micro-frontends/introduction.mdx
+++ b/docs/src/stories/micro-frontends/introduction.mdx
@@ -1,6 +1,6 @@
 import { Meta, Title } from "@storybook/blocks";
 
-<Meta title="Micro Apps/Introduction" />
+<Meta title="Micro Frontends/Introduction" />
 
 <Title>The micro apps for Windows98</Title>
 
