--- a/core/internationalization/i18n/src/locales/micro-frontends/en/mf-shutdown.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/en/mf-shutdown.locale.json
@@ -1,5 +1,5 @@
 {
-	"ma-shutdown": {
+	"mf-shutdown": {
 		"cancel": "Cancel",
 		"description": "What do you want the computer to do?",
 		"ok": "OK",
