--- a/core/internationalization/i18n/src/locales/micro-frontends/en/mf-timer.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/en/mf-timer.locale.json
@@ -1,16 +1,16 @@
 {
-	"ma-timer": {
+	"mf-timer": {
 		"title": "Timer",
-		"reset": "Zurücksetzen",
+		"reset": "Reset",
 		"start": "Start",
-		"stop": "Stopp",
+		"stop": "Stop",
 		"presets": {
-			"title": "Voreinstellungen",
+			"title": "Presets",
 			"three-minutes": "3 min",
 			"five-minutes": "5 min",
 			"ten-minutes": "10 min",
 			"fifteen-minutes": "15 min",
-			"custom": "Benutzerdefiniert"
+			"custom": "Custom"
 		}
 	}
 }
