--- a/core/internationalization/i18n/src/locales/micro-frontends/en/mf-timezone.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/en/mf-timezone.locale.json
@@ -1,5 +1,5 @@
 {
-	"ma-timezone": {
+	"mf-timezone": {
 		"stepper": {
 			"-12": "GMT-12 International Date Line West (IDLW)",
 			"-11": "GMT-11 Nome Time (NT)",
