--- a/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-timer.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-timer.locale.json
@@ -1,16 +1,16 @@
 {
-	"ma-timer": {
-		"title": "Timer",
+	"mf-timer": {
+		"title": "Minutnik",
 		"reset": "Reset",
 		"start": "Start",
 		"stop": "Stop",
 		"presets": {
-			"title": "Presets",
+			"title": "Ustawienia",
 			"three-minutes": "3 min",
 			"five-minutes": "5 min",
 			"ten-minutes": "10 min",
 			"fifteen-minutes": "15 min",
-			"custom": "Custom"
+			"custom": "Niestandardowy"
 		}
 	}
 }
