--- a/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-save-file.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-save-file.locale.json
@@ -4,7 +4,7 @@
 	"mf-save-file.untitled": "Bez_tytuły",
 	"mf-save-file.modal-title": "Zapisz jako",
 	"mf-save-file.save": "Zapisz",
-	"mf-save-file.save-as": "Zapisz jako typ:",
+	"mf-save-file.save-as": "Zapisz jako:",
 	"mf-save-file.text-csv": "CSV Document (*.csv)",
 	"mf-save-file.text-doc": "Word Document (*.doc)",
 	"mf-save-file.text-rtf": "Rich text format (*.rtf)",
