fix(i18n): mf-settings - add missed title

--- a/core/internationalization/i18n/src/locales/micro-frontends/de/mf-settings.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/de/mf-settings.locale.json
@@ -2,6 +2,7 @@
 	"mf-settings": {
 		"customise": "Anpassen",
 		"date-and-time": "Datum und Uhrzeit",
-		"general": "Allgemein"
+		"general": "Allgemein",
+		"title": "Einstellungen"
 	}
 }
