--- a/core/internationalization/i18n/src/locales/micro-frontends/en/mf-settings.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/en/mf-settings.locale.json
@@ -2,6 +2,7 @@
 	"mf-settings": {
 		"customise": "Customise",
 		"date-and-time": "Date and Time",
-		"general": "General"
+		"general": "General",
+		"title": "Settings"
 	}
 }
