--- a/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-settings.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-settings.locale.json
@@ -2,6 +2,7 @@
 	"mf-settings": {
 		"customise": "Dostosuj",
 		"date-and-time": "Data i Czas",
-		"general": "Ogólne"
+		"general": "Ogólne",
+		"title": "Ustawienia"
 	}
 }
