fix(i18n): mf-tic-tac-toe - variables

--- a/core/internationalization/i18n/src/locales/micro-frontends/de/mf-tic-tac-toe.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/de/mf-tic-tac-toe.locale.json
@@ -6,7 +6,7 @@
 		"game": {
 			"draw": "Remis!",
 			"new-game": "Neues Spiel",
-			"player-has-won": "{name} hat gewonnen!",
+			"player-has-won": "{{name}} hat gewonnen!",
 			"score": "Punktestand"
 		},
 		"starter": {
