--- a/core/internationalization/i18n/src/locales/micro-frontends/en/mf-tic-tac-toe.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/en/mf-tic-tac-toe.locale.json
@@ -6,7 +6,7 @@
 		"game": {
 			"draw": "Draw!",
 			"new-game": "New game",
-			"player-has-won": "{name} has won!",
+			"player-has-won": "{{name}} has won!",
 			"score": "Score"
 		},
 		"starter": {
