--- a/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-tic-tac-toe.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-tic-tac-toe.locale.json
@@ -6,7 +6,7 @@
 		"game": {
 			"draw": "Remis!",
 			"new-game": "Nowa gra",
-			"player-has-won": "{name} wygrał!",
+			"player-has-won": "{{name}} wygrał!",
 			"score": "Wynik"
 		},
 		"starter": {
