fix(i18n): mf-start-menu - translation keys

--- a/core/internationalization/i18n/src/locales/micro-frontends/de/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/de/mf-start-menu.locale.json
@@ -12,9 +12,9 @@
 			"help": "Help",
 			"notepad": "Notepad",
 			"programs": "Programs",
-			"run": "Run",
+			"runner": "Run",
 			"settings": "Settings",
-			"shut-down": "Shut Down",
+			"shutdown": "Shut Down",
 			"start": "Start",
 			"tic-tac-toe": "Tic Tac Toe",
 			"timer": "Timer"
