update(docs): packages and imports in files

--- a/docs/src/configs/documentation-template.mdx
+++ b/docs/src/configs/documentation-template.mdx
@@ -1,4 +1,4 @@
-import { Meta, Title, Primary, Controls, Stories } from '@storybook/blocks';
+import { Meta, Title, Primary, Controls, Stories } from "@storybook/addon-docs/blocks";
 
 <Meta isTemplate />
 
