--- a/docs/src/stories/micro-frontends/introduction.mdx
+++ b/docs/src/stories/micro-frontends/introduction.mdx
@@ -1,7 +1,7 @@
-import { Meta, Title } from "@storybook/blocks";
+import { Meta, Title } from "@storybook/addon-docs/blocks";
 
 <Meta title="Micro Frontends/Introduction" />
 
-<Title>The micro apps for Windows98</Title>
+<Title>The micro frontends for Windows98</Title>
 
 {/* TODO: English exercise - create the introduction and why? */}
