docs(docs): @windows98/app

--- a/docs/src/stories/app/introduction.mdx
+++ b/docs/src/stories/app/introduction.mdx
@@ -2,8 +2,20 @@ import { Meta, Title } from "@storybook/addon-docs/blocks";
 
 <Meta title="App/Introduction" />
 
-<Title>The main app for Windows98</Title>
+<Title>🖥️ App</Title>
 
-This is a workspace of the main app, which includes micro-frontends, micro-services, etc.
+The **@windows98/app** is the main orchestrator application that renders the complete Windows 98 desktop experience. It serves as the central hub that coordinates and integrates all micro-frontends, micro-services, and the design system to deliver a cohesive retro computing experience.
 
-{/* TODO: ADD MORE INFORMATION/DOCUMENTATION/INSTRUCTION */}
+## 📖 Documentation Navigation
+
+Explore the complete documentation for the Windows98 app:
+
+- **[🚀 Lifecycle](/docs/app-lifecycle--docs)** - Application startup and initialization process
+- **🏗️ [Architecture](/docs/app-architecture--docs)** - Clean Architecture implementation and layer separation  
+- **🎯 [Key Features](/docs/app-key-features--docs)** - Core capabilities and technical highlights
+- **📦 [Dependencies](/docs/app-dependencies--docs)** - Workspace package integrations and external libraries
+- **🔧 [Development](/docs/app-development--docs)** - Setup, build commands, and development workflow
+
+---
+
+The app serves as the central orchestrator, bringing together all the workspace packages to create the complete Windows 98 desktop experience.
