refactor(docs): @windows98/app

--- a/docs/src/stories/workspaces/app/guide/development.mdx
+++ b/docs/src/stories/workspaces/app/guide/development.mdx
@@ -1,6 +1,6 @@
 import { Meta, Title } from "@storybook/addon-docs/blocks";
 
-<Meta title="App/Development" />
+<Meta title="Workspaces/App/Guide/Development" />
 
 <Title>🔧 Development</Title>
 
@@ -9,21 +9,4 @@ This section covers the essential commands and workflows for developing, buildin
 ## Start development server
 ```bash
 pnpm dev
-```
-
-## Build for production 
-```bash 
-pnpm build
-```
-
-## Preview production build
-```bash
-pnpm preview
-```
-
-## Run linting
-```bash
-pnpm lint:code:run
-pnpm lint:styles:run
-pnpm lint:types:run
 ```
