--- a/core/internationalization/i18n/src/locales/micro-frontends/en/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/en/mf-start-menu.locale.json
@@ -6,6 +6,7 @@
 		"programs": {
 			"accessories": "Accessories",
 			"calculator": "Calculator",
+			"color-generator": "Color Generator",
 			"entertainment": "Entertainment",
 			"find": "Find",
 			"games": "Games",
