--- a/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-start-menu.locale.json
@@ -6,6 +6,7 @@
 		"programs": {
 			"accessories": "Akcesoria",
 			"calculator": "Kalkulator",
+			"color-generator": "Generator Kolorów",
 			"entertainment": "Dokumentacja",
 			"find": "Znajdź",
 			"games": "Gry",
