feat(i18n): mf-color-generator - add copy translation key

--- a/core/internationalization/i18n/src/locales/micro-frontends/de/mf-color-generator.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/de/mf-color-generator.locale.json
@@ -3,6 +3,7 @@
 		"title": "Farbgenerator",
 		"hex": "HEX",
 		"rgb": "RGB",
-		"generate-button": "Generieren"
+		"generate-button": "Generieren",
+		"copy": "Kopieren"
 	}
 }
