--- a/core/internationalization/i18n/src/locales/micro-frontends/en/mf-color-generator.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/en/mf-color-generator.locale.json
@@ -3,6 +3,7 @@
 		"title": "Color Generator",
 		"hex": "HEX",
 		"rgb": "RGB",
-		"generate-button": "Generate"
+		"generate-button": "Generate",
+		"copy": "Copy"
 	}
 }
