--- a/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-color-generator.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-color-generator.locale.json
@@ -3,6 +3,7 @@
 		"title": "Generator Kolorów",
 		"hex": "HEX",
 		"rgb": "RGB",
-		"generate-button": "Generuj"
+		"generate-button": "Generuj",
+		"copy": "Kopiuj"
 	}
 }
