feat(i18n): add translation mf-webcam and update in start-menu

--- a/core/internationalization/i18n/src/locales/micro-frontends/de/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/de/mf-start-menu.locale.json
@@ -18,7 +18,9 @@
 			"shutdown": "Shut Down",
 			"start": "Start",
 			"tic-tac-toe": "Tic Tac Toe",
-			"timer": "Timer"
+			"timer": "Timer",
+			"multimedia": "Multimedia",
+			"webcam": "Webcam"
 		}
 	}
 }
