--- a/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-start-menu.locale.json
@@ -18,7 +18,9 @@
 			"shutdown": "Wyłącz",
 			"start": "Start",
 			"tic-tac-toe": "Kółko i krzyżyk",
-			"timer": "Minutnik"
+			"timer": "Minutnik",
+			"multimedia": "Multimedia",
+			"webcam": "Kamera internetowa"
 		}
 	}
 }
