fix(i18n): name of the translation file case converter

--- a/core/internationalization/i18n/src/locales/micro-frontends/de/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/de/mf-start-menu.locale.json
@@ -6,7 +6,9 @@
 		"programs": {
 			"accessories": "Accessories",
 			"calculator": "Calculator",
+			"case-converter": "Schreibweisen-Konverter",
 			"color-generator": "Farbgenerator",
+			"converters": "Konverter",
 			"entertainment": "Entertainment",
 			"find": "Find",
 			"games": "Games",
