--- a/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-start-menu.locale.json
@@ -6,7 +6,9 @@
 		"programs": {
 			"accessories": "Akcesoria",
 			"calculator": "Kalkulator",
+			"case-converter": "Konwerter liter",
 			"color-generator": "Generator Kolorów",
+			"converters": "Konwertery",
 			"entertainment": "Dokumentacja",
 			"find": "Znajdź",
 			"games": "Gry",
