--- a/core/internationalization/i18n/src/locales/micro-frontends/en/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/en/mf-start-menu.locale.json
@@ -6,7 +6,9 @@
 		"programs": {
 			"accessories": "Accessories",
 			"calculator": "Calculator",
+			"case-converter": "Case converter",
 			"color-generator": "Color Generator",
+			"converters": "Converters",
 			"entertainment": "Entertainment",
 			"find": "Find",
 			"games": "Games",
