--- a/core/internationalization/i18n/src/locales/micro-frontends/en/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/en/mf-start-menu.locale.json
@@ -12,6 +12,7 @@
 			"entertainment": "Entertainment",
 			"find": "Find",
 			"games": "Games",
+			"generators": "Generators",
 			"help": "Help",
 			"notepad": "Notepad",
 			"programs": "Programs",
