--- a/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-start-menu.locale.json
@@ -12,6 +12,7 @@
 			"entertainment": "Dokumentacja",
 			"find": "Znajdź",
 			"games": "Gry",
+			"generators": "Generatory",
 			"help": "Pomoc",
 			"notepad": "Notatnik",
 			"programs": "Programy",
