feat(i18n): qr-code-generator - modal title and start menu

--- a/core/internationalization/i18n/src/locales/micro-frontends/de/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/de/mf-start-menu.locale.json
@@ -8,6 +8,7 @@
 			"calculator": "Calculator",
 			"case-converter": "Schreibweisen-Konverter",
 			"color-generator": "Farbgenerator",
+			"qr-code-generator": "QR-Code-Generator",
 			"converters": "Konverter",
 			"entertainment": "Entertainment",
 			"find": "Find",
