--- a/core/internationalization/i18n/src/locales/micro-frontends/de/mf-qr-code-generator.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/de/mf-qr-code-generator.locale.json
@@ -1,5 +1,8 @@
 {
 	"mf-qr-code-generator": {
+		"modal": {
+			"title": "QR Code Generator"
+		},
 		"input-text": {
 			"label": "Text/Inhalt",
 			"placeholder": "Text, URL oder Inhalt für QR-Code eingeben..."
