--- a/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-qr-code-generator.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-qr-code-generator.locale.json
@@ -1,5 +1,8 @@
 {
 	"mf-qr-code-generator": {
+		"modal": {
+			"title": "QR Code Generator"
+		},
 		"input-text": {
 			"label": "Tekst/Zawartość",
 			"placeholder": "Wpisz tekst, adres URL lub zawartość do kodu QR..."
