fix(web-apis): workspace name from web-api to web-apis

--- a/docs/src/stories/workspaces/web-api/apis/clipboard-api.mdx
+++ b/docs/src/stories/workspaces/web-api/apis/clipboard-api.mdx
@@ -14,7 +14,7 @@ A typed, injectable wrapper for the [Clipboard API](https://developer.mozilla.or
 ## Usage in a Micro-Service
 
 ```ts
-import { ClipboardApi } from "@windows98/web-api";
+import { ClipboardApi } from "@windows98/web-apis";
 
 class ClipboardService {
   constructor(private clipboard: ClipboardApi) {}
