--- a/docs/src/stories/workspaces/web-api/index.mdx
+++ b/docs/src/stories/workspaces/web-api/index.mdx
@@ -4,7 +4,7 @@ import { Meta, Title } from "@storybook/addon-docs/blocks";
 
 <Title>🔧 Web API</Title>
 
-The `@windows98/web-api` workspace provides a curated set of browser Web APIs, wrapped and structured for easy, consistent use within the Windows98 monorepo. These APIs are designed to be injected and consumed primarily by micro-services, following the dependency injection and clean architecture patterns used throughout the project.
+The `@windows98/web-apis` workspace provides a curated set of browser Web APIs, wrapped and structured for easy, consistent use within the Windows98 monorepo. These APIs are designed to be injected and consumed primarily by micro-services, following the dependency injection and clean architecture patterns used throughout the project.
 
 ## Purpose
 
