fix(i18n): image-converter - german translation in information text

--- a/core/internationalization/i18n/src/locales/micro-frontends/de/mf-image-converter.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/de/mf-image-converter.locale.json
@@ -10,7 +10,7 @@
 			"select-label": "Ausgabeformat"
 		},
 		"information": {
-			"text": "Bilder zwischen PNG, JPEG oder WebP konvertieren"
+			"text": "Bilder zwischen PNG, JPEG und WebP konvertieren"
 		},
 		"modal": {
 			"title": "Bildkonverter"
