feat(i18n): start-menu - new key image-converter

--- a/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-start-menu.locale.json
@@ -8,6 +8,7 @@
 			"calculator": "Kalkulator",
 			"case-converter": "Konwerter liter",
 			"color-generator": "Generator Kolorów",
+			"image-converter": "Konwerter Obrazów",
 			"qr-code-generator": "Generator QR Kodów",
 			"converters": "Konwertery",
 			"entertainment": "Dokumentacja",
