--- a/core/internationalization/i18n/src/locales/micro-frontends/en/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/en/mf-start-menu.locale.json
@@ -8,6 +8,7 @@
 			"calculator": "Calculator",
 			"case-converter": "Case converter",
 			"color-generator": "Color Generator",
+			"image-converter": "Image Converter",
 			"qr-code-generator": "QR Code Generator",
 			"converters": "Converters",
 			"entertainment": "Entertainment",
