feat(i18n): start-menu - translation key sound recorder

--- a/core/internationalization/i18n/src/locales/micro-frontends/de/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/de/mf-start-menu.locale.json
@@ -21,6 +21,7 @@
 			"runner": "Run",
 			"settings": "Settings",
 			"shutdown": "Shut Down",
+			"sound-recorder": "Soundrekorder",
 			"start": "Start",
 			"tic-tac-toe": "Tic Tac Toe",
 			"timer": "Timer",
