--- a/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-start-menu.locale.json
+++ b/core/internationalization/i18n/src/locales/micro-frontends/pl/mf-start-menu.locale.json
@@ -21,6 +21,7 @@
 			"runner": "Uruchom",
 			"settings": "Ustawienia",
 			"shutdown": "Wyłącz",
+			"sound-recorder": "Rejestrator dźwięku",
 			"start": "Start",
 			"tic-tac-toe": "Kółko i krzyżyk",
 			"timer": "Minutnik",
